--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prompt-next",
+  "name": "Omaics-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,9 +25,12 @@
     "react-bootstrap": "^2.10.4",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.5.0",
     "react-responsive-masonry": "^2.3.0",
     "react-text-typist": "^1.1.8",
+    "recharts": "^2.15.3",
     "sass": "^1.77.8",
     "swiper": "^11.1.9",
     "yup": "^1.4.0"
